<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts"
        android:title="@string/nav_accounts" />

    <item
        android:id="@+id/navigation_budgets"
        android:icon="@drawable/ic_budgets"
        android:title="@string/nav_budgets" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
